--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@splinetool/runtime": "^1.0.28",
+    "express": "^4.18.2",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
