--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
-    "sharp": "^0.33.2"
+    "react-slick": "^0.29.0",
+    "sharp": "^0.33.2",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
