--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-indiana-drag-scroll": "^2.2.0",
     "react-slick": "^0.30.1",
     "sharp": "^0.33.2",
     "slick-carousel": "^1.8.1"
