--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-responsive-carousel": "^3.2.23"
+    "react-responsive-carousel": "^3.2.23",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1"
   },
   "engines": {
     "node": ">=18"
