--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@studio-freight/lenis": "^1.0.42",
+    "bootstrap-grid-only-css": "^4.1.3",
     "lenis": "^1.1.20",
     "next": "latest",
     "react": "18.2.0",
